// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e.custom e(e.arrayOf(e.custom(e(e.number)))) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "elementSchema": Object {
        "customValidator": [Function],
        "innerExplanations": Array [],
        "type": "Custom",
      },
      "type": "ArrayOf",
    },
    "value": null,
  },
]
`;

exports[`e.custom e(e.arrayOf(e.custom(e(e.number)))) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "elementSchema": Object {
        "customValidator": [Function],
        "innerExplanations": Array [],
        "type": "Custom",
      },
      "type": "ArrayOf",
    },
    "value": false,
  },
]
`;

exports[`e.custom e(e.arrayOf(e.custom(e(e.number)))) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "elementSchema": Object {
        "customValidator": [Function],
        "innerExplanations": Array [],
        "type": "Custom",
      },
      "type": "ArrayOf",
    },
    "value": Object {
      "0": 1,
      "length": 1,
    },
  },
]
`;

exports[`e.custom e(e.arrayOf(e.custom(e(e.number)))) 4`] = `
Array [
  Object {
    "path": Array [
      0,
    ],
    "schema": Object {
      "customValidator": [Function],
      "innerExplanations": Array [
        Object {
          "path": Array [],
          "schema": Object {
            "type": "Number",
          },
          "value": "1",
        },
      ],
      "type": "Custom",
    },
    "value": "1",
  },
]
`;
